decided to implement it as ArrayList